 * Modified more pages to show bug status via color.
 * Modified setcookie() to use paths.
 * Modified fopen() to open with rb instead of r.
 * Modified language files to use long php tags.
 * Modified tr bgcolor elements and moved them into td bgcolor blocks to help MacOS IE color table cells properly.
 * Modified view_all_bug_page to use view_all_set as a pure script to set cookies.
 * Added Hungarian translation.
 * Added g_bug_link_tag to let users customize how to create bug links.
 * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
 * Added a global option to control what access levels can delete bugs.
 * Added g_bug_move_access_level to control what access level can move bugs to other projects.
 * Added extra link after a bug report to go directly to the new bug.
 * Added g_close_bug_threshold for closing a bug.
 * Removed access_min and access threshold concepts from the user and project management.
 * Removed extra "echo" in news archive page.

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.
 * Fixed small problem in all localization files (for $s_reset_request_msg).
 * Fixed summary stats for developers when they are assigned with "developer" rights at a project and do not have default profile >="developer".
 * Fixed reporter poplist filter in buglist when users are assigned >="reporter" at a project and do not have default profile >="reporter".
 * Fixed summary page for "All projects" option
 * Fixed printable buglist for "All projects" option
 * Fixed document links (ChangeLog, README, etc.)
 * Fixed problem where portuguese_brazil localization did not appear correctly.
 * Fixed several minor CSS class consistency issues.
 * Fixed file download links to use rawurlencode().
 * Fixed admin_check.php to check for Windows style \.
 * Fixed file dates to display correctly.