@@ -315,10 +315,10 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td bgcolor="#ddddff">
-		$g_hide_user_email
+		$g_show_user_email
 	</td>
 	<td bgcolor="#ffffff">
-		This disables the automatic generation of mailto: links
+		This disables the automatic generation of mailto links.  Valid values: NONE, ALL, NO_ANONYMOUS, ADMIN_ONLY
 	</td>
 </tr>
 <tr>
